# bimble

./: 1.24  2.24  Cargo.toml  build  build.sh
.cargo/: config.toml
.github/workflows/: rust.yml
src/: check.rs  datagen.rs  main.rs
tst/: cfg.bcf  main.bb
tst/src/: check.rs  datagen.rs
